<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/healthy"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button30"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="142dp"
        android:background="#88373636"
        android:onClick="onClick2"
        android:text="@string/south_indian"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="242dp"
        android:background="#88373636"
        android:onClick="onClick1"
        android:text="@string/north_indian"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="342dp"
        android:background="#88373636"
        android:onClick="onClick17"
        android:text="@string/chinese"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="442dp"
        android:background="#88373636"
        android:onClick="onClick4"
        android:text="@string/italian"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/delicious_food"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>